fixed spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,7 +91,7 @@ body {
 
 .main {
   position: relative;
-  top: 48px;
+  top: 50px;
   z-index: 2;
   padding-left: 5px;
 
