--- a/app/styles/about.module.css
+++ b/app/styles/about.module.css
@@ -4,7 +4,13 @@
   color: var(--text);
   width: var(--container-width);
   position: relative;
-  top: 45px;
+  top: 50px;
+
+  @media screen and (width <=768px) {
+    top: 50px;
+  }
+
+  ;
 }
 
 .soft {
