--- a/app/styles/contact.module.css
+++ b/app/styles/contact.module.css
@@ -6,7 +6,13 @@
   gap: 5px;
   position: relative;
   z-index: 10;
-  top: 45px;
+  top: 50px;
+
+  @media screen and (width <=768px) {
+    top: 50px;
+  }
+
+  ;
 }
 
 .text {
