--- a/app/styles/services.module.css
+++ b/app/styles/services.module.css
@@ -5,7 +5,11 @@
   flex-direction: column;
   gap: 15px;
   position: relative;
-  top: 45px;
+  top: 50px;
+
+  @media screen and (width <=768px) {
+    top: 50px;
+  }
 }
 
 .serviceTitle {
