--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -35,5 +35,11 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  top: 45px;
+  top: 50px;
+
+  @media screen and (width <=768px) {
+    top: 50px;
+  }
+
+  ;
 }
